; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_idmap.c_nfs41_idmap_group_to_gid.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_idmap.c_nfs41_idmap_group_to_gid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.idmap_context = type { i32 }
%struct.idmap_lookup = type { i8*, i32, i32, i32, i32 }
%struct.idmap_group = type { i32 }

@ATTR_GROUP_NAME = common dso_local global i32 0, align 4
@CLASS_GROUP = common dso_local global i32 0, align 4
@TYPE_STR = common dso_local global i32 0, align 4
@group_cmp = common dso_local global i32 0, align 4
@IDLVL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"--> nfs41_idmap_group_to_gid('%s')\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"<-- nfs41_idmap_group_to_gid('%s') failed with %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [49 x i8] c"<-- nfs41_idmap_group_to_gid('%s') returning %u\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs41_idmap_group_to_gid(%struct.idmap_context* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.idmap_context*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.idmap_lookup, align 8
  %8 = alloca %struct.idmap_group, align 4
  %9 = alloca i32, align 4
  store %struct.idmap_context* %0, %struct.idmap_context** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = getelementptr inbounds %struct.idmap_lookup, %struct.idmap_lookup* %7, i32 0, i32 0
  %11 = load i32, i32* @ATTR_GROUP_NAME, align 4
  %12 = sext i32 %11 to i64
  %13 = inttoptr i64 %12 to i8*
  store i8* %13, i8** %10, align 8
  %14 = getelementptr inbounds %struct.idmap_lookup, %struct.idmap_lookup* %7, i32 0, i32 1
  %15 = load i32, i32* @CLASS_GROUP, align 4
  store i32 %15, i32* %14, align 8
  %16 = getelementptr inbounds %struct.idmap_lookup, %struct.idmap_lookup* %7, i32 0, i32 2
  %17 = load i32, i32* @TYPE_STR, align 4
  store i32 %17, i32* %16, align 4
  %18 = getelementptr inbounds %struct.idmap_lookup, %struct.idmap_lookup* %7, i32 0, i32 3
  %19 = load i32, i32* @group_cmp, align 4
  store i32 %19, i32* %18, align 8
  %20 = getelementptr inbounds %struct.idmap_lookup, %struct.idmap_lookup* %7, i32 0, i32 4
  store i32 0, i32* %20, align 4
  %21 = load i32, i32* @IDLVL, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 (i32, i8*, i8*, ...) @dprintf(i32 %21, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i8* %22)
  %24 = load i8*, i8** %5, align 8
  %25 = getelementptr inbounds %struct.idmap_lookup, %struct.idmap_lookup* %7, i32 0, i32 0
  store i8* %24, i8** %25, align 8
  %26 = load %struct.idmap_context*, %struct.idmap_context** %4, align 8
  %27 = call i32 @idmap_lookup_group(%struct.idmap_context* %26, %struct.idmap_lookup* %7, %struct.idmap_group* %8)
  store i32 %27, i32* %9, align 4
  %28 = load i32, i32* %9, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %3
  %31 = load i32, i32* @IDLVL, align 4
  %32 = load i8*, i8** %5, align 8
  %33 = load i32, i32* %9, align 4
  %34 = call i32 (i32, i8*, i8*, ...) @dprintf(i32 %31, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i8* %32, i32 %33)
  br label %44

35:                                               ; preds = %3
  %36 = getelementptr inbounds %struct.idmap_group, %struct.idmap_group* %8, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32*, i32** %6, align 8
  store i32 %37, i32* %38, align 4
  %39 = load i32, i32* @IDLVL, align 4
  %40 = load i8*, i8** %5, align 8
  %41 = getelementptr inbounds %struct.idmap_group, %struct.idmap_group* %8, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32 (i32, i8*, i8*, ...) @dprintf(i32 %39, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.2, i64 0, i64 0), i8* %40, i32 %42)
  br label %44

44:                                               ; preds = %35, %30
  %45 = load i32, i32* %9, align 4
  ret i32 %45
}

declare dso_local i32 @dprintf(i32, i8*, i8*, ...) #1

declare dso_local i32 @idmap_lookup_group(%struct.idmap_context*, %struct.idmap_lookup*, %struct.idmap_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
